# ejemplos-lc-lg

./: .gitignore  README.md  ejemplo.env  main.py  mcp_poc.py  pyproject.toml  requirements.txt
agente_solicitud_vacaciones/: agente_busca_solicitud.py  api_validar_solicitud.py  gmail_get_message_with_attachments.py  mcp_multiagente_solicitud_vacaciones.py  multiagente_solicitud_vacaciones.py  vacation_request_agent.py  validar_solicitud.py
